objects/Book__c.object
<CustomObject>
    <label>Book</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Fiction</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>Author__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Book_ID__c</fullName>
        <displayFormat>B-{0}</displayFormat>
        <label>Book ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>Publisher__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_date__c</fullName>
        <label>Publish date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Review_Count__c</fullName>
        <label>Book Review Count</label>
        <summaryForeignKey>Review__c.Book__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Book_Average_Rating__c</fullName>
        <formula>Book_Average_Rating_calc__c / Book_Review_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Average_Rating_calc__c</fullName>
        <label>Book Average Rating calc</label>
        <summarizedField>Review__c.Average_Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Book__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>